--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -9,7 +9,7 @@ description: 一个爱看书的程序员，不是码农...
 author: wangzhongke
 language: zh-CN
 timezone: UTC
-avatar: /images/avatar.jpg
+#avatar: /images/avatar.jpg
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -70,6 +70,8 @@ theme: material-flow
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
+
+#npm install hexo-deployer-git --save
 deploy:
   type: git
   repository: git@github.com:wzhongke/wzhongke.github.io.git
