--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -3,13 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 王忠珂的博客
+title: 壹叶知秋的博客
 subtitle: blog of wangzhongke
 description: 一个爱看书的程序员，不是码农...
-author: wangzhongke
+author: 壹叶知秋
 language: zh-CN
 timezone: UTC
-#avatar: /images/avatar.jpg
+avatar: /images/sign.png
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
