--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -9,7 +9,7 @@ description: 一个爱看书的程序员，不是码农...
 author: 壹叶知秋
 language: zh-CN
 timezone: UTC
-avatar: /images/sign.png
+avatar: /images/sign.jpg
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
