add some new thing

--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 壹叶知秋的博客
 subtitle: blog of wangzhongke
-description: 一个爱看书的程序员，不是码农...
+description: 不要为恐惧所驾驭...
 author: 壹叶知秋
 language: zh-CN
 timezone: UTC
