--- a/blog/package.json
+++ b/blog/package.json
@@ -6,19 +6,21 @@
     "version": "3.3.8"
   },
   "dependencies": {
-    "hexo": "^3.3.7",
-    "hexo-autoprefixer": "^1.0.0",
-    "hexo-deployer-git": "^0.3.0",
+    "gulp-htmlclean": "^2.7.15",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-imagemin": "^3.3.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^3.0.0",
+    "hexo": "^3.2.0",
+    "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
-    "hexo-generator-feed": "^1.2.0",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-json-content": "^3.0.1",
-    "hexo-generator-search": "^2.1.1",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-renderer-ejs": "^0.2.0",
+    "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-less": "^0.2.0",
-    "hexo-renderer-marked": "^0.2.10",
+    "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0"
   }
